--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           <a href="#section2">2. Bitcoin the Beginning</a>
           <a href="#section3">3. Beyond Cryptocurrency: Altcoins</a>
           <a href="#section4">4. Risks and Responsible Investing</a>
-          <a href="#section5s">5. The Future of Cryptocurrency</a>
+          <a href="#section5">5. The Future of Cryptocurrency</a>
         </div>
       </div>
       <ul>
