--- a/contact.html
+++ b/contact.html
@@ -57,19 +57,7 @@
               <li>
                 <h3>Developer 2</h3>
                 <p>
-                  My name is <strong>Albert</strong> Lorem ipsum dolor sit amet
-                  consectetur adipisicing elit. Reiciendis nulla quas dolorum.
-                  Excepturi ad perspiciatis voluptatem qui libero facilis quam
-                  quae enim soluta ex. Hic voluptate libero tenetur illum.
-                  Maiores ab sapiente necessitatibus eos atque, laboriosam
-                  soluta doloribus cum Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Deleniti eos culpa, deserunt corrupti omnis
-                  repellat. Nobis est maxime deleniti doloribus expedita eos
-                  iure, accusamus possimus eum, itaque hic illo esse? Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-                  impedit quae nemo harum neque facilis possimus, eaque odit
-                  tempore iste assumenda, maxime veniam iusto eius. Ducimus est
-                  soluta iusto debitis.
+                  My name is Albert, and for the past few years, I’ve been deeply fascinated by the world of cryptocurrency. What started as simple curiosity about Bitcoin quickly evolved into a full-time interest in how blockchain technology is reshaping finance, ownership, and even the internet itself. What draws me most to crypto is the idea of decentralization—the possibility of creating systems that don’t rely on traditional institutions, but instead trust math, code, and consensus. I’ve spent countless hours researching projects, studying market trends, and learning how different networks like Ethereum, Solana, or Bitcoin actually function under the hood.
                 </p>
               </li>
             </ul>
