--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,18 @@
               <li>
                 <h3>Developer 2</h3>
                 <p>
-                  My name is Albert, and for the past few years, I’ve been deeply fascinated by the world of cryptocurrency. What started as simple curiosity about Bitcoin quickly evolved into a full-time interest in how blockchain technology is reshaping finance, ownership, and even the internet itself. What draws me most to crypto is the idea of decentralization—the possibility of creating systems that don’t rely on traditional institutions, but instead trust math, code, and consensus. I’ve spent countless hours researching projects, studying market trends, and learning how different networks like Ethereum, Solana, or Bitcoin actually function under the hood.
+                  My name is Albert, and for the past few 
+                  years, I’ve been deeply fascinated by the world of
+                  cryptocurrency. What started as simple curiosity about Bitcoin 
+                  quickly evolved into a full-time interest in how blockchain
+                  technology is reshaping finance, ownership, and even the
+                  internet itself. What draws me most to crypto is the idea 
+                  of decentralization—the possibility of creating systems 
+                  that don’t rely on traditional institutions, but instead 
+                  trust math, code, and consensus. I’ve spent countless hours 
+                  researching projects, studying market trends, and learning 
+                  how different networks like Ethereum, Solana, or Bitcoin
+                  actually function under the hood.
                 </p>
               </li>
             </ul>
