--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
               <li>
                 <h3>Developer 2</h3>
                 <p>
-                  My name is Albert, and for the past few 
+                  My name is <strong>Albert</strong>, and for the past few 
                   years, I’ve been deeply fascinated by the world of
                   cryptocurrency. What started as simple curiosity about Bitcoin 
                   quickly evolved into a full-time interest in how blockchain
